# generate_docs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/application/schemas/: report.py  report_template.py
app/application/services/: report_service.py  template_service.py
app/domain/: entities.py  interfaces.py  value_objects.py
app/domain/models/: report.py  report_template.py  value_objects.py
app/domain/repositories/: data_source.py  file_storage.py  generator.py  message_queue.py  report.py  report_template.py
app/infrastructure/celery_tasks/: celery_bus.py  worker.py
app/infrastructure/data_source/: sql_data_source.py
app/infrastructure/database/: dependecies.py  models.py  session.py
app/infrastructure/database/migrations/: env.py
app/infrastructure/database/migrations/versions/: 2026_04_17_0747-e1a23ef799a4_initial_migration.py  2026_04_17_0749-935407ee5a1f_initial_migrations.py  2026_04_17_0802-8add777bfb47_change_columns_to_timezone.py
app/infrastructure/database/repositories/: report_repository.py  template_repository.py
app/infrastructure/generators/: excel_generator.py  pdf_generator.py
app/infrastructure/logging/: logging.py
app/infrastructure/redis/: client.py  service.py
app/infrastructure/storage/: s3_storage.py
app/presentation/: dependecies.py
app/presentation/middleware/: logging.py
app/presentation/routers/: reports.py  templates.py
