[tool.poetry]
name = "generate-docs"
version = "0.1.0"
description = ""
authors = ["Kirill Slepnev <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
mypy = "^1.20.0"
puff = "^0.6"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
