[tool.poetry]
name = "generate-docs"
version = "0.1.0"
description = ""
authors = ["Kirill Slepnev <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
celery = "^5.6.3"
minio = "^7.2.20"
sqlalchemy = "^2.0.49"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
redis = "^7.4.0"
kombu = "^5.6.2"
pydantic-settings = "^2.13.1"
python-multipart = "^0.0.26"
openpyxl = "^3.1.5"
reportlab = "^4.4.10"
python-dotenv = "^1.2.2"
flower = "^2.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
mypy = "^1.20.0"
pre-commit = "^4.5.1"
ruff = "^0.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true
